--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "6.16.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
